apps/70-tools/headlamp/overlays/dev/ingress-patch.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: headlamp
spec:
  rules:
    - host: headlamp.dev.truxonline.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: headlamp
                port:
                  number: 80
  tls:
    - hosts:
        - headlamp.dev.truxonline.com
      secretName: headlamp-tls
