apps/70-tools/headlamp/overlays/dev/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: headlamp
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-staging
    traefik.ingress.kubernetes.io/router.entrypoints: web, websecure
    traefik.ingress.kubernetes.io/router.middlewares: traefik-redirect-https@kubernetescrd
    gethomepage.dev/enabled: "true"
    gethomepage.dev/group: Tools
    gethomepage.dev/name: Headlamp
    gethomepage.dev/icon: headlamp.svg
    gethomepage.dev/description: Kubernetes dashboard
spec:
  ingressClassName: traefik
  rules:
    - host: headlamp.dev.truxonline.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: headlamp
                port:
                  number: 80
  tls:
    - hosts:
        - headlamp.dev.truxonline.com
      secretName: headlamp-tls
